# CloudWeave

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt
app/: __init__.py
app/cdk_constructs/: __init__.py  cdk_app.py  cdk_kms.py  cdk_s3.py  cdk_stack.py
app/commons/: __init__.py  common_decorators.py  config_loader.py  constants.py  resource_name_pattern.py  utils.py
app/facade/: __init__.py
app/model/: __init__.py  account.py  storage.py  tags.py
app/service/: encryption.py  storage.py
examples/: README.md  __init__.py  simple_kms.py
src/cloudweave/: __init__.py
src/cloudweave/core/: __init__.py  naming.py  types.py
src/cloudweave/providers/: __init__.py
src/cloudweave/providers/aws/: __init__.py
src/cloudweave/providers/aws/cryptography/: __init__.py  interfaces.py  kms.py
tests/: test_cdk_stack.py  test_config_loader.py
